--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -16,9 +16,7 @@
 <body>
     <div class="app">
         {{> header}}
-        <div class="container" style="
-    padding-bottom: 200px;
-">
+        <div class="container" style="padding-bottom: 200px;">
             {{{body}}}
         </div>
         {{> footer}}
