--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,14 +1,9 @@
 <style>
-  footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-  }
+  footer { position: fixed; left: 0; bottom: 0; width: 100%; }
 </style>
-<footer class="footer-duckduy bg-light mt-auto text-center py-4">
+<footer class="footer-duckduy bg-light mt-auto text-center">
   <div class="container">
-    <section class="d-flex justify-content-between mb-4">
+    <section class="d-flex justify-content-between align-items-center">
       <a href="#" class="navbar-brand">
         <img
           src="https://i.gifer.com/XOsX.gif"
@@ -18,7 +13,7 @@
           class="d-inline-block align-top"
         />
       </a>
-      <p>
+      <p class="mb-0">
         &copy; 2024 DuckDuy LMS. All rights reserved.
       </p>
 
