--- a/src/resources/views/chart.hbs
+++ b/src/resources/views/chart.hbs
@@ -1,5 +1,5 @@
 
-    <h1>Submission Per Year</h1>
+    <h1>Number of Submissions Per Year</h1>
     <!-- First Chart - Line Chart -->
     <div>
         <canvas id="submissionChart" width="800" height="400"></canvas>
