--- a/src/resources/views/magazine/confirmDownload.hbs
+++ b/src/resources/views/magazine/confirmDownload.hbs
@@ -1,7 +1,29 @@
+<style>
+    body {
+      background-color: #f0f8ff; /* Light blue background */
+      font-family: sans-serif;
+    }
+  </style>
+</head>
 <body>
-    <h1>Confirm Download</h1>
-    <p>You are about to download.</p>
-    <form action="../download" method="post">
-        <button type="submit">Confirm Download</button>
-    </form>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card rounded shadow">
+          <div class="card-body text-center">
+            <i class="bi bi-cloud-download-fill display-4 text-success"></i>
+            <h1 class="card-title mt-3">Confirm Download</h1>
+            <p class="card-text">You are about to download a file.</p>
+            <form action="../download" method="post">
+              <button type="submit" class="btn btn-success rounded-pill"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-download-fill mr-2" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 0a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 4.095 0 5.555 0 7.318 0 9.366 1.708 11 3.781 11H7.5V5.5a.5.5 0 0 1 1 0V11h4.188C14.502 11 16 9.57 16 7.773c0-1.636-1.242-2.969-2.834-3.194C12.923 1.999 10.69 0 8 0m-.354 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V11h-1v3.293l-2.146-2.147a.5.5 0 0 0-.708.708z"/>
+</svg> Confirm Download</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-AQRv5aYrpt4zPQ913YO0mIpl6zCWcaFNCOjjl8vYzGyzTqCS0zLI4+VDLSA0CWqp" crossorigin="anonymous"></script>
 </body>
