--- a/src/resources/views/magazine/view.hbs
+++ b/src/resources/views/magazine/view.hbs
@@ -43,49 +43,64 @@
     </div>
 
     <div class="row mt-4">
-        <div class="col-md-12">
-            <!-- Table for viewing all magazines -->
-            <div class="table-responsive">
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Title</th>
-                            <th>Academic Year</th>
-                            <th>Faculty</th>
-                            <th>Total Submissions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#each magazines}}
-                        <tr>
-                            <td>{{title}}</td>
-                            <td>{{academicYear.name}}</td>
-                            <td>{{faculty.name}}</td>
-                            <td>{{totalSubmissions}} <a href="./confirm-download/{{this._id}}"
-                                    class="btn btn-sm btn-primary mr-2"> Download All</a></td>
-                        </tr>
-                        {{/each}}
-                    </tbody>
-                </table>
-            </div>
-        </div>
+  <div class="col-md-12">
+    <div class="table-responsive">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr class="thead-dark">
+            <th scope="col">Title</th>
+            <th scope="col">Academic Year</th>
+            <th scope="col">Faculty</th>
+            <th scope="col">Total Submissions</th>
+            <th scope="col"></th> </tr>
+        </thead>
+        <tbody>
+          {{#each magazines}}
+          <tr>
+            <td>{{title}}</td>
+            <td>{{academicYear.name}}</td>
+            <td>{{faculty.name}}</td>
+            <td>{{totalSubmissions}}</td>
+            <td>
+             <a href="./confirm-download/{{this._id}}" class="btn btn-sm btn-primary align-items-center" style="background: linear-gradient(to right, #0c9adc, #007bff); color: white;">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-download-fill" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 0a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 4.095 0 5.555 0 7.318 0 9.366 1.708 11 3.781 11H7.5V5.5a.5.5 0 0 1 1 0V11h4.188C14.502 11 16 9.57 16 7.773c0-1.636-1.242-2.969-2.834-3.194C12.923 1.999 10.69 0 8 0m-.354 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V11h-1v3.293l-2.146-2.147a.5.5 0 0 0-.708.708z"/>
+</svg>
+  Download All
+</a>
+            </td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
     </div>
+  </div>
+</div>
+
 
     <!-- Pagination -->
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             {{#if (gt totalPages 1)}}
             {{#if (gt currentPage 1)}}
-            <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
-            <li class="page-item"><a class="page-link" href="?page={{sub currentPage 1}}">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="?page=1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M12.5 15a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5M10 8a.5.5 0 0 1-.5.5H3.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L3.707 7.5H9.5a.5.5 0 0 1 .5.5"/>
+</svg></a></li>
+            <li class="page-item"><a class="page-link" href="?page={{sub currentPage 1}}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+</svg></a></li>
             {{/if}}
             {{#each pages}}
             <li class="page-item {{#if (eq this ../currentPage)}}active{{/if}}"><a class="page-link"
                     href="?page={{this}}">{{this}}</a></li>
             {{/each}}
             {{#if (lt currentPage totalPages)}}
-            <li class="page-item"><a class="page-link" href="?page={{add currentPage 1}}">Next</a></li>
-            <li class="page-item"><a class="page-link" href="?page={{totalPages}}">Last</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{add currentPage 1}}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+</svg></a></li>
+            <li class="page-item"><a class="page-link" href="?page={{totalPages}}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-right" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M6 8a.5.5 0 0 0 .5.5h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L12.293 7.5H6.5A.5.5 0 0 0 6 8m-2.5 7a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5"/>
+</svg></a></li>
             {{/if}}
             {{/if}}
         </ul>
