--- a/src/resources/views/submission/viewForCoordinator.hbs
+++ b/src/resources/views/submission/viewForCoordinator.hbs
@@ -1,62 +1,63 @@
 <h1 class="text-center mb-4">Manage Submissions {{facultyName}}</h1>
 
-<form action="/coordinator/submission/view" method="GET">
-    <label for="status">Status:</label>
-    <select name="status" id="status">
-        <option value="">All</option>
+<form action="/coordinator/submission/view" method="GET" class="search-form">
+  <div class="row align-items-center">
+    <div class="col-md-4 mb-3">
+       <label for="sort" class="form-label me-2">Status:</label>
+  <select name="status" id="status" class="form-select rounded-pill shadow-sm custom-select">
+     <option value="">All</option>
         <option value="submitted">Submitted</option>
         <option value="approved">Approved</option>
         <option value="rejected">Rejected</option>
-    </select>
-
-    <label for="search">Search:</label>
-    <input type="text" name="search" id="search">
-
-    <button type="submit">Apply Filters</button>
-    <div class="row">
-        <div class="col-md-12">
-            <!-- Table for viewing all submissions -->
-            <div class="table-responsive">
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Student's name</th>
-                            <th>Title</th>
-                            <th>Posted to (Magazine)</th>
-                            <th>Academic Year</th>
-                            <th>Date submitted</th>
-                            {{!-- <th>Academic year </th> --}}
-                            <th>Status</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#each submissions}}
-                        <tr>
-                            <td>{{this.student.fullName}}</td>
-
-                            <td>{{this.title}}</td>
-                            <td>{{this.magazine.title}}</td>
-                            <td>{{this.magazine.academicYear.name}}</td>
-
-                            <td>{{formatDateForView this.dateSubmitted}}</td>
-                            {{!-- <td>{{this.magazine.academicYear.name}}({{formatDateForView
-                                this.magazine.academicYear.finalClosureDate}})</td> --}}
-                            <td>{{this.status}}</td>
-                            <td>
-                                {{#if (notOlderThanFourteenDays this.dateSubmitted)}}
-                                <a href="./{{this._id}}/edit" class="btn btn-sm btn-primary mr-2">Edit</a>
-                                {{/if}}
-                                <!-- Add additional actions as needed -->
-                            </td>
-                        </tr>
-                        {{/each}}
-                    </tbody>
-                </table>
-            </div>
-        </div>
+  </select>
     </div>
+    <div class="col-md-6 mb-3">
+      <label for="search" class="form-label">Search:</label>
+      <div class="input-group rounded-pill shadow-sm">
+        <input type="text" name="search" id="search" class="form-control" placeholder="Search submissions">
+        <button type="submit" class="btn btn-primary rounded-pill">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+</svg>        </button>
+      </div>
+    </div>
+  </div>
+  <div class="table-responsive">
+    <table class="table table-striped table-hover rounded shadow">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Student's name</th>
+          <th scope="col">Title</th>
+          <th scope="col">Posted to (Magazine)</th>
+          <th scope="col">Academic Year</th>
+          <th scope="col">Date submitted</th>
+          <th scope="col">Status</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        {{#each submissions}}
+        <tr>
+          <td>{{this.student.fullName}}</td>
+          <td>{{this.title}}</td>
+          <td>{{this.magazine.title}}</td>
+          <td>{{this.magazine.academicYear.name}}</td>
+          <td>{{formatDateForView this.dateSubmitted}}</td>
+          <td>{{this.status}}</td>
+          <td>
+            {{#if (notOlderThanFourteenDays this.dateSubmitted)}}
+            <a href="./{{this._id}}/edit" class="btn btn-sm btn-primary mr-2">Edit</a>
+            {{/if}}
+            </td>
+        </tr>
+        {{/each}}
+      </tbody>
+    </table>
+  </div>
 </form>
+
+
+
 <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             {{#if (gt totalPages 1)}}
