--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -4,7 +4,7 @@
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse  justify-content-end" id="navbarSupportedContent">
     <ul class="navbar-nav ">
       {{!-- for Admin --}}
       {{#if (eq authen 'admin')}}
@@ -43,25 +43,15 @@
         {{/if}}
 
       </li>
-    </ul>
+   
     <form class="form-inline my-2 my-lg-0 d-flex">
-      {{!-- <div class="input-group">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <div class="input-group-append">
-          <button class="btn btn-outline-primary" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-              height="16" fill="currentColor" class="bi bi-search-heart-fill" viewBox="0 0 16 16">
-              <path
-                d="M6.5 13a6.47 6.47 0 0 0 3.845-1.258h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1A6.47 6.47 0 0 0 13 6.5 6.5 6.5 0 0 0 6.5 0a6.5 6.5 0 1 0 0 13m0-8.518c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018" />
-            </svg></button>
-        </div>
-
-      </div> --}}
       {{#if authen}}
       <a class="btn btn-success my-2 my-sm-0 ml-2" href="/logout">Logout</a>
       {{else}}
       <a class="btn btn-primary my-2 my-sm-0 ml-2" href="/login">Login</a>
       {{/if}}
     </form>
+     </ul>
   </div>
 </nav>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
