Change From Download to View

--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -30,7 +30,7 @@
                         <h5 class="card-title">{{title}}</h5>
                         <p class="card-text">Submitted by: {{student.fullName}}</p>
                         <p class="card-text">Submitted to Magazine: {{../title}}</p>
-                        <a href="{{viewDocLink}}" class="btn btn-primary">Download Document</a>
+                        <a href="{{viewDocLink}}" class="btn btn-primary">View Document</a>
                     </div>
                 </div>
             </div>
