--- a/src/resources/views/submission/edit.hbs
+++ b/src/resources/views/submission/edit.hbs
@@ -82,13 +82,13 @@
                 Comment:
               </label>
               <textarea
+                disabled
                 class="form-control"
                 id="comment"
                 name="comment"
                 rows="3"
                 style="font-size: 16px;"
-              >
-                {{submission.comment}}
+              >{{submission.comment}}
               </textarea>
             </div>
             <div class="form-group mb-3">
